# cogs-negotiation-agent

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  agent_model.py  app.py  app.yaml  bootstrap.py  build_dashboard.py  build_genie.py  build_knowledge.py  build_market_data.py  cogs-agent-flow.html  data_foundation.py  deploy_agent.py  deploy_config.py  eval_agent.py  monitor_agent.py  promote_feedback.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: Feedback.tsx  PageHeader.tsx  Sidebar.tsx
frontend/src/pages/: Brief.tsx  Deck.tsx  Hub.tsx  Negotiator.tsx  Rehearsal.tsx  Scorecard.tsx
server/: agents.py  analytics_agent.py  config.py  data.py  deck_data.py  genie.py  knowledge.py  llm.py  rehearsal_agent.py  state.py  supervisor.py  tools.py
server/routes/: agentic.py  catalog.py  genie_routes.py  supervisor_routes.py
